[project]
name = "netcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==5.0.0",
    "psycopg2-binary==2.9.11",
    "pyside6==6.10.2",
    "pyside6-addons==6.10.2",
    "pyside6-essentials==6.10.2",
    "python-dotenv==1.2.2",
    "shiboken6==6.10.2",
]
